mule-user-guide/v/3.5/stdio-transport-reference.adoc
=  STDIO传输参考
:keywords: mule, esb, studio, system out, system in, debugging

STDIO Transport允许读取和写入流数据到Java的System.out和System.in对象进行调试。

以下示例配置STDIO连接器：

[source,xml, linenums]
----
<mule xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
      xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:spring="http://www.springframework.org/schema/beans"
      xmlns:stdio="http://www.mulesoft.org/schema/mule/stdio"
      xsi:schemaLocation="http://www.mulesoft.org/schema/mule/stdio
      http://www.mulesoft.org/schema/mule/stdio/3.6/mule-stdio.xsd
      http://www.springframework.org/schema/beans
      http://www.springframework.org/schema/beans/spring-beans-current.xsd
      http://www.mulesoft.org/schema/mule/core
      http://www.mulesoft.org/schema/mule/core/3.6/mule.xsd">
  
    <stdio:connector name="stdioConnector" messageDelayTime="1234"
           outputMessage="abc" promptMessage="bcd"
           promptMessageCode="456" resourceBundle="dummy-messages"
           doc:name="STDIO"/>
     
    <flow name="flow">
      <stdio:inbound-endpoint  system="IN" connector-ref="stdioConnector"/>
        <all>
            <processor-chain>
                <stdio:outbound-endpoint system="OUT"
                   connector-ref="stdioConnector"/> 
            <stdio:outbound-endpoint system="ERR"
                   connector-ref="stdioConnector" />
            </processor-chain>
        </all>
    </flow>
</mule>
----

*Note*：在此代码示例中，`spring-beans-current.xsd`是一个占位符。要找到正确的版本，请参阅 http://www.springframework.org/schema/beans/[http://www.springframework.org/schema/beans/]。

== 变压器

STDIO传输没有内置变压器。

== 国际化讯息

如果您的应用程序是 link:/mule-user-guide/v/3.6/internationalizing-strings[国际化]，则还可以将STDIO连接器的promptMessages和outputMessages国际化。 （这假定您已经创建了一个资源包，其中包含您在该页面上描述的消息。）

要国际化，必须同时指定resourceBundle参数和promptMessageCode和/或outputMessageCode参数。 resourceBundle参数包含资源包本身的密钥。 promptMessageCode为提示消息的包中的消息提供密钥。在上面的代码片段中，"dummy-messages"资源包意味着提示信息"456"出现在包`META-INF/services/org/mule/i18n/dummy-messages<langCode>.properties`中。

== 连接器

<connector...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
| messageDelayTime  | long  |否 |   |将提示输出到stdout之前的延迟时间（以毫秒为单位）。
| outputMessage  |字符串 |否 |   |发送消息时将文本打印到标准输出。
| promptMessage  |字符串 |否 |   |等待输入时将文本打印到标准输出。
| promptMessageCode  |字符串 |否 |   |用于从资源包检索提示消息的代码。
| outputMessageCode  | string  | no  |   |用于从资源包检索输出消息的代码。
| resourceBundle  |字符串 |否 |   |资源包提供promptMessageCode提示。
|===

<connector...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===
